fixed aside section on small

--- a/Day_11/sassy_surf/css/style.scss
+++ b/Day_11/sassy_surf/css/style.scss
@@ -13,7 +13,7 @@ h1 {
     font-weight: bold;
 }
 
-h1, h2,h3 {
+h1, h2, h3 {
     line-height: 1.2;
     letter-spacing: .7;
 }
@@ -30,6 +30,8 @@ h2, h3, h4 {
 
 h3 {
     font-size: 25px;
+    margin-bottom: 8px;
+    color: #083452;
 }
 
 h4 {
@@ -53,7 +55,7 @@ a {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     &:hover {
-        color: red;
+        color: #106db3;
     }
 }
 
@@ -114,10 +116,6 @@ header {
     }
 }
 
-
-
-
-
 .container {
     margin: 0 auto;
     overflow: hidden;
@@ -127,23 +125,18 @@ header {
 /*article_part1----------------------------------------------*/
 
 article {
-    clear: both;
-    text-align: left;
     float: left;
+    clear: left;
     margin-bottom: 60px;
-    &:last-of-type{
- 
-        margin-bottom:30px;
+    &:last-of-type {
+        margin-bottom: 30px;
     }
-    
     h2 {
         color: #083452;
         margin-bottom: 18px;
-        max-width: 450px;
     }
-    h3 {
-        margin-bottom:8px;
-        color: #083452;
+    h2, h3 {
+        max-width: 450px;
     }
     img {
         max-width: 40px;
@@ -163,9 +156,8 @@ article {
         color: #5e686f;
         max-width: 550px;
     }
-    .marg{
-        margin-top:30px;
-
+    .marg {
+        margin-top: 30px;
     }
 }
 
@@ -176,7 +168,6 @@ h4 {
     border-left: 2px solid #a3b3bf;
     padding: 18px 0 6px 16px;
     margin-bottom: 20px;
-
 }
 
 /*WOAH--------------------------------------------------------------------------*/
@@ -201,70 +192,48 @@ h4 {
 /* article nav---------------------------------------------------------------------*/
 
 .article-nav {
-    
-    overflow:hidden;
-    float:left;
-    clear:left;
-    width:100%;
-
-
-
+    overflow: hidden;
+    float: left;
+    clear: left;
+    width: 100%;
+    margin-bottom: 120px;
     .nav {
-        margin-bottom:15px;
-        margin-right:15px;
-        float:left;
-        &:hover{
-         .big_nav{
-              background: #106db3;
-
-         }
-         .baby_nav{
-            background: #083452;
-
-         }
+        margin-bottom: 15px;
+        margin-right: 15px;
+        float: left;
+        &:hover {
+            .big_nav {
+                background: #106db3;
+            }
+            .baby_nav {
+                background: #083452;
+            }
         }
-
-        
-       
-    
-          
-           
-
-       
-       
     }
     .baby_nav {
-        float:left;
-       
-        
+        float: left;
         background: #5e686f;
     }
     .big_nav {
-       float:left;
-       
+        float: left;
         background: #a3b3bf;
-       
         color: black;
         text-align: center;
         line-height: 30px;
         font-family: helvetica;
         font-size: 14px;
-        padding:0 10px 0 10px;
+        padding: 0 10px 0 10px;
     }
- 
-
-    .baby_nav, .big_nav{
-        color:#fff;
+    .baby_nav, .big_nav {
+        color: #fff;
     }
 }
 
 /*aside----------------------------------------------*/
 
 aside {
-    max-width: 278px;
-    margin-top: 5px;
-    margin-right: 160px;
-    float: right;
+    width: 80%;
+    margin: 0 auto;
 }
 
 aside img {
@@ -282,38 +251,28 @@ aside nav a {
     font-size: 14px;
     text-decoration: none;
     margin-right: 10px;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
-.float-right {
-    float: right;
+aside {
+    a {
+        &:nth-child(4) {
+            float: right;
+            margin: 10px 5px 0 0;
+        }
+    }
 }
 
-aside p {
-    float: left;
-    margin-left: 22px;
-    margin-top: 35px;
-    margin-bottom: 54px;
-}
+aside p {}
 
 aside h3 {
-    text-align: left;
     font-weight: bold;
     color: #083452;
     clear: right;
-    margin-top: 80px;
+    margin-top: 60px;
     font-size: 18;
-}
-
-aside #left_align {
-    text-align: left;
-    line-height: 24px;
-    font-size: 14px;
-    float: left;
-    width: 278px;
-    position: relative;
-    right: 22px;
-    bottom: 26px;
-    color: #a3b3bf;
 }
 
 /*posts------------------------------------------------------------*/
@@ -405,6 +364,5 @@ footer {
         font-size: 14px;
     }
 }
-
 
 @import "mediaqueries";
